force-app/main/default/objects/Questionnaire_Response__c/Questionnaire_Response__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Response</label>
    <nameField>
        <displayFormat>QR-{000000}</displayFormat>
        <label>Questionnaire Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>