force-app/main/default/objects/Questionnaire_Response__c/fields/Invite_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Invite_Email_Date__c</fullName>
    <label>Invite Email Date</label>
    <type>Date</type>
</CustomField>