force-app/main/default/objects/Questionnaire_Response__c/fields/Questionnaire_URL__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_URL__c</fullName>
    <formula>HYPERLINK(&quot;https:/interpipe.my.site.com/NewCustomerRoom/s/survey?recordId=&quot; &amp; Id, &quot;https:/interpipe.my.site.com/NewCustomerRoom/s/survey?recordId=&quot; &amp; Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire URL</label>
    <type>Text</type>
</CustomField>