force-app/main/default/objects/Questionnaire_Response__c/fields/Recall_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Recall_Email_Date__c</fullName>
    <label>Recall Email Date</label>
    <type>Date</type>
</CustomField>