force-app/main/default/objects/Questionnaire_Response__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Respondent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Questionnaire Responses</relationshipLabel>
    <relationshipName>Questionnaire_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>