force-app/main/default/objects/Questionnaire_Response__c/fields/Respondent_Account__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Account__c</fullName>
    <formula>Respondent__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respondent Account</label>
    <type>Text</type>
</CustomField>