force-app/main/default/objects/Questionnaire_Response__c/fields/Respondent_Language__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Language__c</fullName>
    <label>Respondent Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Ukrainian</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>