force-app/main/default/objects/Questionnaire_Response__c/fields/RespondentEmail__c.field-meta.xml
<CustomField>
    <fullName>RespondentEmail__c</fullName>
    <label>Respondent Email</label>
    <type>Email</type>
</CustomField>