force-app/main/default/objects/Questionnaire_Response__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <formula>CASE(TEXT(Respondent__r.Salutation),
  &quot;Mr.&quot;, &quot;Dear Mr.&quot;,
  &quot;Mrs.&quot;, &quot;Dear Mrs&quot;,
  &quot;Ms.&quot;, &quot;Dear Ms&quot;,
  &quot;Пані&quot;, &quot;Шановна Пані&quot;,
  &quot;Пан&quot;, &quot;Шановний Пане&quot;,
  &quot;Господин&quot;, &quot;Уважаемый Господин&quot;,
  &quot;Госпожа&quot;, &quot;Уважаемая Госпожа&quot;,
  &quot;Dear Mr./Mrs.&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>